--- a/index.html
+++ b/index.html
@@ -8,6 +8,7 @@
     </head>
     <body>
         <h1 id="title">Take The Deal</h1>
+        <h3 id="instructions">Start New Game</h3>
         <div id="content">
             <div id="valueBoard">
                 <div id=".01" class="value"><p>$</p><p>.01</p></div>
@@ -64,6 +65,12 @@
                 <button class="case" data-casenum="24">24</button>
                 <button class="case" data-casenum="25">25</button>
                 <button class="case" data-casenum="26">26</button>
+            </div>
+            <div id="caseSelection">
+                <h3>Your Case:</h3>
+                <div id="caseSquare">
+
+                </div>
             </div>
         </div>
         <script src="index.js"></script>
