Add instructions.json file Add divs for page layout Add First case selection logic

--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
     </head>
     <body>
         <h1 id="title">Take The Deal</h1>
-        <h3 id="instructions">Start New Game</h3>
+        <h3 id="instructions"></h3>
         <div id="content">
             <div id="valueBoard">
                 <div id=".01" class="value"><p>$</p><p>.01</p></div>
@@ -38,38 +38,42 @@
                 <div id="750" class="value"><p>$</p><p>750</p></div>
                 <div id="1,000,000" class="value"><p>$</p><p>1,000,000</p></div>
             </div>
-            <div id="caseBoard">
-                <button class="case" data-casenum="1">1</button>
-                <button class="case" data-casenum="2">2</button>
-                <button class="case" data-casenum="3">3</button>
-                <button class="case" data-casenum="4">4</button>
-                <button class="case" data-casenum="5">5</button>
-                <button class="case" data-casenum="6">6</button>
-                <button class="case" data-casenum="7">7</button>
-                <button class="case" data-casenum="8">8</button>
-                <button class="case" data-casenum="9">9</button>
-                <button class="case" data-casenum="10">10</button>
-                <button class="case" data-casenum="11">11</button>
-                <button class="case" data-casenum="12">12</button>
-                <button class="case" data-casenum="13">13</button>
-                <button class="case" data-casenum="14">14</button>
-                <button class="case" data-casenum="15">15</button>
-                <button class="case" data-casenum="16">16</button>
-                <button class="case" data-casenum="17">17</button>
-                <button class="case" data-casenum="18">18</button>
-                <button class="case" data-casenum="19">19</button>
-                <button class="case" data-casenum="20">20</button>
-                <button class="case" data-casenum="21">21</button>
-                <button class="case" data-casenum="22">22</button>
-                <button class="case" data-casenum="23">23</button>
-                <button class="case" data-casenum="24">24</button>
-                <button class="case" data-casenum="25">25</button>
-                <button class="case" data-casenum="26">26</button>
-            </div>
-            <div id="caseSelection">
-                <h3>Your Case:</h3>
-                <div id="caseSquare">
-
+            <div id="playArea">
+                <div id="caseBoard">
+                    <button class="case" data-casenum="1">1</button>
+                    <button class="case" data-casenum="2">2</button>
+                    <button class="case" data-casenum="3">3</button>
+                    <button class="case" data-casenum="4">4</button>
+                    <button class="case" data-casenum="5">5</button>
+                    <button class="case" data-casenum="6">6</button>
+                    <button class="case" data-casenum="7">7</button>
+                    <button class="case" data-casenum="8">8</button>
+                    <button class="case" data-casenum="9">9</button>
+                    <button class="case" data-casenum="10">10</button>
+                    <button class="case" data-casenum="11">11</button>
+                    <button class="case" data-casenum="12">12</button>
+                    <button class="case" data-casenum="13">13</button>
+                    <button class="case" data-casenum="14">14</button>
+                    <button class="case" data-casenum="15">15</button>
+                    <button class="case" data-casenum="16">16</button>
+                    <button class="case" data-casenum="17">17</button>
+                    <button class="case" data-casenum="18">18</button>
+                    <button class="case" data-casenum="19">19</button>
+                    <button class="case" data-casenum="20">20</button>
+                    <button class="case" data-casenum="21">21</button>
+                    <button class="case" data-casenum="22">22</button>
+                    <button class="case" data-casenum="23">23</button>
+                    <button class="case" data-casenum="24">24</button>
+                    <button class="case" data-casenum="25">25</button>
+                    <button class="case" data-casenum="26">26</button>
+                </div>
+                <div id="playerInfo">
+                    <div id="decisionButtons">
+                        <button id="takeBtn">Take</button>
+                        <button id="leaveBtn">Leave</button>
+                    </div>
+                </div>
+                <div id="caseSelection">
                 </div>
             </div>
         </div>
