--- a/index.html
+++ b/index.html
@@ -11,32 +11,32 @@
         <h3 id="instructions"></h3>
         <div id="content">
             <div id="valueBoard">
-                <div id=".01" class="value"><p>$</p><p>.01</p></div>
-                <div id="1,000" class="value"><p>$</p><p>1,000</p></div>
+                <div id="0" class="value"><p>$</p><p>.01</p></div>
+                <div id="1000" class="value"><p>$</p><p>1,000</p></div>
                 <div id="1" class="value"><p>$</p><p>1</p></div>
-                <div id="5,000" class="value"><p>$</p><p>5,000</p></div>
+                <div id="5000" class="value"><p>$</p><p>5,000</p></div>
                 <div id="5" class="value"><p>$</p><p>5</p></div>
-                <div id="10,000" class="value"><p>$</p><p>10,000</p></div>
+                <div id="10000" class="value"><p>$</p><p>10,000</p></div>
                 <div id="10" class="value"><p>$</p><p>10</p></div>
-                <div id="25,000" class="value"><p>$</p><p>25,000</p></div>
+                <div id="25000" class="value"><p>$</p><p>25,000</p></div>
                 <div id="25" class="value"><p>$</p><p>25</p></div>
-                <div id="50,000" class="value"><p>$</p><p>50,000</p></div>
+                <div id="50000" class="value"><p>$</p><p>50,000</p></div>
                 <div id="50" class="value"><p>$</p><p>50</p></div>
-                <div id="75,000" class="value"><p>$</p><p>75,000</p></div>
+                <div id="75000" class="value"><p>$</p><p>75,000</p></div>
                 <div id="75" class="value"><p>$</p><p>75</p></div>
-                <div id="100,000" class="value"><p>$</p><p>100,000</p></div>
+                <div id="100000" class="value"><p>$</p><p>100,000</p></div>
                 <div id="100" class="value"><p>$</p><p>100</p></div>
-                <div id="200,000" class="value"><p>$</p><p>200,000</p></div>
+                <div id="200000" class="value"><p>$</p><p>200,000</p></div>
                 <div id="200" class="value"><p>$</p><p>200</p></div>
-                <div id="300,000" class="value"><p>$</p><p>300,000</p></div>
+                <div id="300000" class="value"><p>$</p><p>300,000</p></div>
                 <div id="300" class="value"><p>$</p><p>300</p></div>
-                <div id="400,000" class="value"><p>$</p><p>400,000</p></div>
+                <div id="400000" class="value"><p>$</p><p>400,000</p></div>
                 <div id="400" class="value"><p>$</p><p>400</p></div>
-                <div id="500,000" class="value"><p>$</p><p>500,000</p></div>
+                <div id="500000" class="value"><p>$</p><p>500,000</p></div>
                 <div id="500" class="value"><p>$</p><p>500</p></div>
-                <div id="750,000" class="value"><p>$</p><p>750,000</p></div>
+                <div id="750000" class="value"><p>$</p><p>750,000</p></div>
                 <div id="750" class="value"><p>$</p><p>750</p></div>
-                <div id="1,000,000" class="value"><p>$</p><p>1,000,000</p></div>
+                <div id="1000000" class="value"><p>$</p><p>1,000,000</p></div>
             </div>
             <div id="playArea">
                 <div id="caseBoard">
