Add styling to case and decision buttons Create styling for selected case Fix layout issues (centering play area elements, margins on valueBoard, etc.)

--- a/index.html
+++ b/index.html
@@ -3,7 +3,10 @@
     <head>
         <meta charset="utf-8" />
         <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-        <link rel="stylesheet" href="index.css" />
+        <link rel="stylesheet" href="styles.css" />
+        <link rel="preconnect" href="https://fonts.googleapis.com">
+        <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+        <link href="https://fonts.googleapis.com/css2?family=Inclusive+Sans:ital,wght@0,300..700;1,300..700&family=Work+Sans:ital,wght@0,100..900;1,100..900&display=swap" rel="stylesheet">
         <title>Take the Deal</title>
     </head>
     <body>
@@ -71,8 +74,8 @@
                 </section>
                 <section id="playerInfo">
                     <div id="decisionButtons">
-                        <button id="takeBtn">Take</button>
-                        <button id="leaveBtn">Leave</button>
+                        <button id="takeBtn" class="decision"><strong>Take</strong></button>
+                        <button id="leaveBtn" class="decision"><strong>Leave</strong></button>
                     </div>
                 </section>
                 <section id="caseSelection">
