Fixed animationend Event listener for master case animation; Changed background color

--- a/index.html
+++ b/index.html
@@ -50,8 +50,8 @@
             <section id="playArea">
                 <div id="masterCase">
                     <div id="masterCaseInner">
-                        <div id="revealValue"></div>
-                        <div id="revealCase"></div>
+                        <div id="revealValue"><p id="mcV"></p></div>
+                        <div id="revealCase"><p id="mcC"></p></div>
                     </div>
                     <!-- <hr id="masterCaseEdge"> -->
                 </div>
