Change color of masterCaseValue to be darker; Fix case size for mobile displays;

--- a/index.html
+++ b/index.html
@@ -10,13 +10,9 @@
         <title>Take the Deal</title>
     </head>
     <body>
-        <header>
+        <!-- <header>
             <h1 id="title">Take The Deal</h1>
-        </header>
-        <div id="instructionContainer">
-            <h3>Values</h3>
-            <h3 id="instructions"></h3>
-        </div>
+        </header> -->
         <hr>
         <main id="content">
             <section id="valueBoard">
@@ -48,6 +44,7 @@
                 <div id="1000000" class="value"><p>$</p><p>1,000,000</p></div>
             </section>
             <section id="playArea">
+                <h3 id="instructions"></h3>
                 <div id="masterCase">
                     <div id="masterCaseInner">
                         <div id="revealValue"><p id="mcV"></p></div>
