Add banker offer screen in HTML to display current and previous offers Style banker offers

--- a/index.html
+++ b/index.html
@@ -45,12 +45,20 @@
             </section>
             <section id="playArea">
                 <h3 id="instructions"></h3>
+                <div id="bankerOffer">
+                    <h3>Banker's offer</h3>
+                    <h2 id="currentOffer">$30,000</h2>
+                    <h3>Previous offers</h3>
+                    <ul id="previousOffers">
+                        <li>$10,000</li>
+                        <li>$5,000</li>
+                    </ul>
+                </div>
                 <div id="masterCase">
                     <div id="masterCaseInner">
                         <div id="revealValue"><p id="mcV"></p></div>
                         <div id="revealCase"><p id="mcC"></p></div>
                     </div>
-                    <!-- <hr id="masterCaseEdge"> -->
                 </div>
                 <section id="caseBoard">
                     <button class="case" data-casenum="1">1</button>
