--- a/index.html
+++ b/index.html
@@ -59,32 +59,32 @@
                     </div>
                 </div>
                 <section id="caseBoard">
-                    <button class="case" data-casenum="1">1</button>
-                    <button class="case" data-casenum="2">2</button>
-                    <button class="case" data-casenum="3">3</button>
-                    <button class="case" data-casenum="4">4</button>
-                    <button class="case" data-casenum="5">5</button>
-                    <button class="case" data-casenum="6">6</button>
-                    <button class="case" data-casenum="7">7</button>
-                    <button class="case" data-casenum="8">8</button>
-                    <button class="case" data-casenum="9">9</button>
-                    <button class="case" data-casenum="10">10</button>
-                    <button class="case" data-casenum="11">11</button>
-                    <button class="case" data-casenum="12">12</button>
-                    <button class="case" data-casenum="13">13</button>
-                    <button class="case" data-casenum="14">14</button>
-                    <button class="case" data-casenum="15">15</button>
-                    <button class="case" data-casenum="16">16</button>
-                    <button class="case" data-casenum="17">17</button>
-                    <button class="case" data-casenum="18">18</button>
-                    <button class="case" data-casenum="19">19</button>
-                    <button class="case" data-casenum="20">20</button>
-                    <button class="case" data-casenum="21">21</button>
-                    <button class="case" data-casenum="22">22</button>
-                    <button class="case" data-casenum="23">23</button>
-                    <button class="case" data-casenum="24">24</button>
-                    <button class="case" data-casenum="25">25</button>
-                    <button class="case" data-casenum="26">26</button>
+                    <button class="case">1</button>
+                    <button class="case">2</button>
+                    <button class="case">3</button>
+                    <button class="case">4</button>
+                    <button class="case">5</button>
+                    <button class="case">6</button>
+                    <button class="case">7</button>
+                    <button class="case">8</button>
+                    <button class="case">9</button>
+                    <button class="case">10</button>
+                    <button class="case">11</button>
+                    <button class="case">12</button>
+                    <button class="case">13</button>
+                    <button class="case">14</button>
+                    <button class="case">15</button>
+                    <button class="case">16</button>
+                    <button class="case">17</button>
+                    <button class="case">18</button>
+                    <button class="case">19</button>
+                    <button class="case">20</button>
+                    <button class="case">21</button>
+                    <button class="case">22</button>
+                    <button class="case">23</button>
+                    <button class="case">24</button>
+                    <button class="case">25</button>
+                    <button class="case">26</button>
                 </section>
                 <section id="playerInfo">
                     <div id="decisionButtons">
