--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
         <link rel="stylesheet" href="styles.css" />
         <link rel="preconnect" href="https://fonts.googleapis.com">
         <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-        <link href="https://fonts.googleapis.com/css2?family=Work+Sans:ital,wght@0,100..900;1,100..900&display=swap" rel="stylesheet">
+        <link href="https://fonts.googleapis.com/css2?family=Bruno+Ace+SC&family=Work+Sans:ital,wght@0,100..900;1,100..900&display=swap" rel="stylesheet">
         <title>Take the Deal</title>
     </head>
     <body>
@@ -48,7 +48,7 @@
                 <div id="bankerOffer">
                     <h3>Banker's offer</h3>
                     <h2 id="currentOffer">$30,000</h2>
-                    <h3>Previous offers</h3>
+                    <h4>Previous offers</h4>
                     <ul id="previousOffers">
                     </ul>
                 </div>
