Create bitmap.svg for background main; Reimplement title

--- a/index.html
+++ b/index.html
@@ -10,10 +10,9 @@
         <title>Take the Deal</title>
     </head>
     <body>
-        <!-- <header>
+        <header>
             <h1 id="title">Take The Deal</h1>
-        </header> -->
-        <hr>
+        </header>
         <main id="content">
             <section id="valueBoard">
                 <div id="0" class="value"><p>$</p><p>.01</p></div>
