Add button transitions

--- a/index.html
+++ b/index.html
@@ -46,7 +46,7 @@
                 <h3 id="instructions"></h3>
                 <div id="bankerOffer">
                     <h3>Banker's offer</h3>
-                    <h2 id="currentOffer">$30,000</h2>
+                    <h2 id="currentOffer"></h2>
                     <h4>Previous offers</h4>
                     <ul id="previousOffers">
                     </ul>
